# ftp-reolink

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
config/: reoftpd.example.toml
docs/superpowers/plans/: 2026-06-19-reoftpd-implementation.md  2026-06-22-connection-caps.md  2026-06-23-encryption-at-rest.md
docs/superpowers/specs/: 2026-06-18-reoftpd-design.md  2026-06-22-connection-caps-design.md  2026-06-23-encryption-at-rest-design.md
packaging/: reoftpd-cleanup.service  reoftpd-cleanup.timer  reoftpd.rc  reoftpd.service
scripts/: install.sh
src/: account.rs  append.rs  auth.rs  backend.rs  cli.rs  config.rs  crypto.rs  hashing.rs  lib.rs  limits.rs  main.rs  nftables.rs  paths.rs  presence.rs  retention.rs  server.rs  tls.rs
tests/: integration.rs
