[package]
name = "reoftpd"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "reoftpd"
path = "src/lib.rs"

[[bin]]
name = "reoftpd"
path = "src/main.rs"

[dependencies]
libunftp = "0.23"
unftp-core = "0.1"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std", "getrandom"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.29", features = ["user", "signal"] }
rcgen = "0.13"
governor = "0.6"
arc-swap = "1"

[dev-dependencies]
suppaftp = "6"
tempfile = "3"
